<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.eghm</groupId>
    <artifactId>parent</artifactId>
    <version>1.0</version>
    <packaging>pom</packaging>

    <modules>
        <module>service</module>
        <module>webapp-server</module>
        <module>manage-server</module>
    </modules>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.12</version>
        <relativePath/>
    </parent>

    <properties>
        <!--spring boot版本-->
        <spring.boot.version>3.2.12</spring.boot.version>
        <!--项目编码-->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!--maven编译版本-->
        <maven.compiler.source>17</maven.compiler.source>
        <!--maven编译版本-->
        <maven.compiler.target>17</maven.compiler.target>
        <!--图形验证码版本-->
        <kaptcha.version>2.3.2</kaptcha.version>
        <!--sql日志打印版本-->
        <log4jdbc.version>1.2</log4jdbc.version>
        <!--sql日志打印-->
        <p6spy.version>3.9.1</p6spy.version>
        <!--guava工具类版本-->
        <guava.version>33.0.0-jre</guava.version>
        <!--apache工具类版本-->
        <commons.lang3.version>3.17.0</commons.lang3.version>
        <!--json工具类版本-->
        <fastjson.version>2.0.52</fastjson.version>
        <!--打包跳过测试-->
        <skipTests>true</skipTests>
        <!--生成编译的工具类-->
        <lombok.version>1.18.34</lombok.version>
        <!--分布式数据库工具-->
        <sharding-jdbc.version>2.0.3</sharding-jdbc.version>
        <!--redis客户端工具-->
        <redisson.version>3.37.0</redisson.version>
        <!--redisson-netty客户端-->
        <netty.version>4.1.107.Final</netty.version>
        <!--中文拼音解析-->
        <pinyin.version>2.5.1</pinyin.version>
        <!--mysql版本-->
        <mysql.version>8.4.0</mysql.version>
        <!--工具类-->
        <hutool.version>5.8.33</hutool.version>
        <!--jwt版本依赖-->
        <jwt.version>4.4.0</jwt.version>
        <!--swagger2版本-->
        <knif4j.version>4.4.0</knif4j.version>
        <!--微信三方sdk包-->
        <wx-sdk.version>4.6.0</wx-sdk.version>
        <!--支付宝sdk-->
        <ali-sdk.version>2.2.2</ali-sdk.version>
        <!--mybatis-plus-->
        <mybatis-plus.version>3.5.9</mybatis-plus.version>
        <!--异步线程变量-->
        <transmittable.version>2.14.5</transmittable.version>
        <!--excel导出-->
        <easyexcel.version>4.0.3</easyexcel.version>
        <!--jackson 1.8日期格式序列号兼容包-->
        <jackson-ext.version>2.15.4</jackson-ext.version>
        <!--缓存-->
        <caffeine.version>3.1.8</caffeine.version>
        <!--阿里短信-->
        <ali.sms.version>3.1.0</ali.sms.version>
        <!--腾讯短信-->
        <tencent.sms.version>3.1.1043</tencent.sms.version>
        <!--阿里oss-->
        <ali.oss.version>3.17.4</ali.oss.version>
        <!--状态机-->
        <cola.version>4.3.1</cola.version>
        <!--快递100-->
        <kuaidi-version>1.0.12</kuaidi-version>
    </properties>

    <!--定义依赖包,需要子modules显式添加依赖,不需要版本即可-->
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.eghm</groupId>
                <artifactId>service</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.auth0</groupId>
                <artifactId>java-jwt</artifactId>
                <version>${jwt.version}</version>
            </dependency>
            <dependency>
                <groupId>cn.hutool</groupId>
                <artifactId>hutool-bom</artifactId>
                <version>${hutool.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.redisson</groupId>
                <artifactId>redisson-spring-boot-starter</artifactId>
                <version>${redisson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>transmittable-thread-local</artifactId>
                <version>${transmittable.version}</version>
            </dependency>
            <dependency>
                <groupId>com.aliyun</groupId>
                <artifactId>dysmsapi20170525</artifactId>
                <version>${ali.sms.version}</version>
                <exclusions>
                    <exclusion>
                        <artifactId>dom4j</artifactId>
                        <groupId>org.dom4j</groupId>
                    </exclusion>
                    <exclusion>
                        <artifactId>tea</artifactId>
                        <groupId>com.aliyun</groupId>
                    </exclusion>
                    <exclusion>
                        <artifactId>org.jacoco.agent</artifactId>
                        <groupId>org.jacoco</groupId>
                    </exclusion>
                    <exclusion>
                        <artifactId>credentials-java</artifactId>
                        <groupId>com.aliyun</groupId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>com.aliyun.oss</groupId>
                <artifactId>aliyun-sdk-oss</artifactId>
                <version>${ali.oss.version}</version>
                <exclusions>
                    <exclusion>
                        <artifactId>org.jacoco.agent</artifactId>
                        <groupId>org.jacoco</groupId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-bom</artifactId>
                <version>${mybatis-plus.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.tencentcloudapi</groupId>
                <artifactId>tencentcloud-sdk-java-sms</artifactId>
                <version>${tencent.sms.version}</version>
            </dependency>
            <dependency>
                <groupId>com.belerweb</groupId>
                <artifactId>pinyin4j</artifactId>
                <version>${pinyin.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mysql</groupId>
                <artifactId>mysql-connector-j</artifactId>
                <version>${mysql.version}</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba.cola</groupId>
                <artifactId>cola-component-statemachine</artifactId>
                <version>${cola.version}</version>
            </dependency>
            <!--验证码-->
            <dependency>
                <groupId>com.github.penggle</groupId>
                <artifactId>kaptcha</artifactId>
                <version>${kaptcha.version}</version>
            </dependency>
            <dependency>
                <groupId>com.googlecode.log4jdbc</groupId>
                <artifactId>log4jdbc</artifactId>
                <version>${log4jdbc.version}</version>
            </dependency>
            <dependency>
                <groupId>p6spy</groupId>
                <artifactId>p6spy</artifactId>
                <version>${p6spy.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons.lang3.version}</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba.fastjson2</groupId>
                <artifactId>fastjson2</artifactId>
                <version>${fastjson.version}</version>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.kuaidi100-api</groupId>
                <artifactId>sdk</artifactId>
                <version>${kuaidi-version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.xiaoymin</groupId>
                <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
                <version>${knif4j.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.binarywang</groupId>
                <artifactId>weixin-java-miniapp</artifactId>
                <version>${wx-sdk.version}</version>
                <exclusions>
                    <exclusion>
                        <artifactId>checker-qual</artifactId>
                        <groupId>org.checkerframework</groupId>
                    </exclusion>
                    <exclusion>
                        <artifactId>error_prone_annotations</artifactId>
                        <groupId>com.google.errorprone</groupId>
                    </exclusion>
                    <exclusion>
                        <artifactId>commons-io</artifactId>
                        <groupId>commons-io</groupId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>com.github.binarywang</groupId>
                <artifactId>weixin-java-mp</artifactId>
                <version>${wx-sdk.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.binarywang</groupId>
                <artifactId>weixin-java-pay</artifactId>
                <version>${wx-sdk.version}</version>
                <exclusions>
                    <exclusion>
                        <artifactId>guava</artifactId>
                        <groupId>com.google.guava</groupId>
                    </exclusion>
                    <exclusion>
                        <artifactId>commons-io</artifactId>
                        <groupId>commons-io</groupId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>com.alipay.sdk</groupId>
                <artifactId>alipay-easysdk</artifactId>
                <version>${ali-sdk.version}</version>
                <exclusions>
                    <exclusion>
                        <artifactId>bcprov-jdk15on</artifactId>
                        <groupId>org.bouncycastle</groupId>
                    </exclusion>
                    <exclusion>
                        <artifactId>guava</artifactId>
                        <groupId>com.google.guava</groupId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>easyexcel</artifactId>
                <version>${easyexcel.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.ben-manes.caffeine</groupId>
                <artifactId>caffeine</artifactId>
                <version>${caffeine.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>